fixed footer alignment, navigation, added overlay

--- a/website/static/css/newbase.css
+++ b/website/static/css/newbase.css
@@ -74,8 +74,8 @@ html [data-theme="dark"] {
     display: grid;
     height: 100%;
     width: 100%;
-    grid-template-columns: 200px 1fr;
-    grid-template-rows: 64px;
+    grid-template-columns: 200px 1fr; /* 200px 1fr */
+    grid-template-rows: 64px auto 75px; /* 64px. Adding auto for main fixed alignment for footer and footer 75px */
 
     /* Desktops and larger screens */
     grid-template-areas: 
@@ -291,18 +291,6 @@ button {
 }
 
 /* Top Nav dropdown */
-.grid-nav-nav-dropdown {
-    width: 100%;
-    height: 300px;
-    background-color: red;
-}
-
-.grid-nav-nav-dropdown-item {
-}
-
-
-
-
 
 
 /* Left Sidebar */
@@ -476,7 +464,7 @@ button {
 
     /* Adds padding to main container for contents */
     padding: 1rem;
-    height: 100%;
+    
 }
 
 @media screen and (max-width: 768px) {
@@ -484,7 +472,7 @@ button {
     /* Move footer up when screen resized if no contents */
     .grid-container > #main {
         padding: 1rem;
-        height: fit-content;
+        /* height: fit-content; */
     }
     
 }
@@ -529,4 +517,16 @@ button {
 .terms-and-conditions {
     text-align: end;
     width: 30%;
+}
+
+#overlay-backdrop {
+    position: fixed;
+    display: none;
+    width: calc(100%);
+    height: calc(100% - 64px);
+    top: 64px;
+    /* left: 200px; */
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    /* cursor: pointer; */
 }
